update before test gen report