@@ -30,8 +30,8 @@ public class GenerateCode {
 	public static String getKeyList(Class<?> responseClass, String searchText, int pageNo, int pageSize, String sortBy,
 			String sortType) {
 		searchText = searchText!=null?searchText:"";
-		String key = String.format("all%s:%s:%d:%d:%s:%s", responseClass.getSimpleName(), searchText, pageNo, pageSize,
-				sortBy, sortType);
+		String key = "all%s:%s:%d:%d:%s:%s".formatted(responseClass.getSimpleName(), searchText, pageNo, pageSize,
+                sortBy, sortType);
 		return key;
 	}
 
@@ -41,7 +41,7 @@ public class GenerateCode {
 	}
 	public static String getKeyPagination(Class<?> responseClass,String searchText) {
 		searchText = searchText!=null?searchText:"";
-		String key = String.format("pagination%s:%s", responseClass.getSimpleName(),searchText);
+		String key = "pagination%s:%s".formatted(responseClass.getSimpleName(), searchText);
 		return key;
 	}
 }
